--- a/adverto/style.css
+++ b/adverto/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Pacifico");
+@import url("https://fonts.googleapis.com/css?family=Comfortaa");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700");
 
 * {
