--- a/adverto/style.css
+++ b/adverto/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Comfortaa");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Comfortaa:400,600,700");
 
 * {
   margin: 0;
