--- a/adverto/style.css
+++ b/adverto/style.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
+
 @import url("https://fonts.googleapis.com/css?family=Comfortaa");
-@import url("https://fonts.googleapis.com/css?family=Comfortaa:400,600,700");
+
 
 * {
   margin: 0;
@@ -7,7 +9,7 @@
 }
 
 body {
-  font-family: "Comfortaa";
+  font-family: 'Comfortaa';
   max-width: 100vw;
   overflow-x: hidden;
 }
